--- a/Css/main.css
+++ b/Css/main.css
@@ -298,6 +298,10 @@ ul li a:hover {
         color: #121212;
         transform: scale(1.1);
     }
+
+    input, textarea {
+        border-radius: 5px;
+    }
 }
 
 #enviar {
